Register and Login Backend (#43)
* init register and login

* refactor

* after review

* Update online-city-tickets-backend/src/main/java/org/pwr/onlinecityticketsbackend/config/RequestContext.java


---------
