# online-city-tickets-backend/src/main/resources/static/openapi.json
@@ -82,7 +82,12 @@
                     "409": {
                         "description": "Email already in use."
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
             }
         },
         "/auth/login": {
